removed ignored files

--- a/Digit Recognizer/🔪SVC Score 0.975.ipynb
+++ b/Digit Recognizer/🔪SVC Score 0.975.ipynb
@@ -5,7 +5,7 @@
    "id": "6a5aa438",
    "metadata": {},
    "source": [
-    "## 📌 SVC 97%\n",
+    "## 🔪 Digit Recognition using SVC 97%\n",
     "<hr style=\"height:2px; background-color:black; border:none;\">"
    ]
   },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "77d67962",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "01ab419a",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "ce49998a",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "90448201",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
        "SVC(random_state=42)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "15fec682",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "1ea980da",
    "metadata": {},
    "outputs": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "12285d9d",
    "metadata": {
     "scrolled": true
@@ -271,7 +271,7 @@
        "SVC(random_state=42)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "7f1d36da",
    "metadata": {},
    "outputs": [],
