--- a/Digit Recognizer/🚀Digit Recognizer Only Linear Algebra Score 82%.ipynb
+++ b/Digit Recognizer/🚀Digit Recognizer Only Linear Algebra Score 82%.ipynb
@@ -13,7 +13,7 @@
    "id": "7f1ebab8",
    "metadata": {},
    "source": [
-    "# 🔢 Solving Kaggle Digit Recognizer Using Only Linear Algebra (Score: 0.82) 🚀\n",
+    "# 🔢 Solving Kaggle Digit Recognizer Using Only Linear Algebra Score 82% 🚀\n",
     "<hr style=\"height:2px; background-color:black; border:none;\">"
    ]
   },
