--- a/Digit Recognizer/🧩Logistic Regression Score 0.91.ipynb
+++ b/Digit Recognizer/🧩Logistic Regression Score 0.91.ipynb
@@ -5,7 +5,7 @@
    "id": "6a5aa438",
    "metadata": {},
    "source": [
-    "## 📌 Digit Recognition using Logistic Regression\n",
+    "## 🧩 Digit Recognition using Logistic Regression 91%\n",
     "<hr style=\"height:2px; background-color:black; border:none;\">"
    ]
   },
@@ -27,13 +27,11 @@
     "># ⚖️ Standardizing the Data\n",
     ">StandardScaler()\n",
     "># ✂️ Splitting Data into Training and Testing Sets\n",
-    ">train_test_split()\n",
     "> ```\n",
     ">\n",
     ">### 🎯 Training the Model\n",
     ">```python\n",
     ">LogisticRegression(max_iter=1000)\n",
-    ">model.fit(X_train, y_train)\n",
     ">```\n",
     ">\n",
     ">### 📊 Evaluating the Model\n",
