--- a/Digit Recognizer/Sklearn standard model/🔪SVC Score 95%.ipynb
+++ b/Digit Recognizer/Sklearn standard model/🔪SVC Score 95%.ipynb
@@ -152,6 +152,7 @@
     }
    ],
    "source": [
+    "%%time\n",
     "model = SVC(kernel='rbf', random_state=42)\n",
     "model.fit(X_train, y_train)"
    ]
@@ -195,6 +196,7 @@
     }
    ],
    "source": [
+    "%%time\n",
     "y_pred_train = model.predict(X_train)\n",
     "y_pred_test = model.predict(X_test)\n",
     "\n",
