based on the work of

--- a/Digit Recognizer/Math for ML/SVD.ipynb
+++ b/Digit Recognizer/Math for ML/SVD.ipynb
@@ -491,7 +491,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "9eae6072",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
