--- a/Digit Recognizer/Math for ML/🤖Neural network 4layer 3Activation Score 89%.ipynb
+++ b/Digit Recognizer/Math for ML/🤖Neural network 4layer 3Activation Score 89%.ipynb
@@ -5,7 +5,7 @@
    "id": "923beaac",
    "metadata": {},
    "source": [
-    "# base on the work of Samson Zhang "
+    "# based on the work of Samson Zhang "
    ]
   },
   {
